--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\" \"app/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@genkit-ai/ai": "^1.12.0",
+    "@genkit-ai/core": "^1.12.0",
+    "@genkit-ai/firebase": "^1.12.0",
+    "@genkit-ai/flow": "^0.5.17",
+    "@genkit-ai/googleai": "^1.12.0",
+    "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
@@ -54,6 +60,7 @@
     "firebase": "^10.9.0",
     "firebase-admin": "^11.5.0",
     "framer-motion": "^12.16.0",
+    "genkit": "^1.12.0",
     "helmet": "^6.0.1",
     "ioredis": "^5.6.1",
     "jspdf": "^2.5.1",
@@ -64,7 +71,9 @@
     "next-themes": "^0.2.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "2.16.105",
+    "pdfkit": "^0.17.1",
     "postcss": "^8.4.35",
+    "puppeteer": "^24.10.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
